Fixing .header with align-items: center

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,7 +6,7 @@
     
     display: flex;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
 }
 
 .header > .title {
